# termuxclaw

./: .gitignore  AGENTS.md  CODEBASE_INDEX.md  Cargo.toml  INSTALL-TRIM-GUIDE.md  README.md  SELF-HEALING-GUIDE.md  TERMUX-API-HANG-FIX.md  TERMUX_SYSTEM_PROMPT_GUIDE.md  install.sh  install.sh.cross-platform.bak  trim_matrices.py  update_workflows.py
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: termux-only.agent.md
.github/workflows/: checks-on-pr.yml  ci-run.yml  cross-platform-build-manual.yml  main-branch-flow.md  publish-crates-auto.yml  release-beta-on-push.yml  release-stable-manual.yml  release.yml
dev/: termux-boot.sh  zeroclaw-watchdog.sh
docs/contributing/: actions-source-policy.md  ci-map.md  docs-contract.md
docs/ops/: troubleshooting.md
docs/reference/api/: channels-reference.md
docs/setup-guides/: README.md  one-click-bootstrap.md  termux-setup.md
scripts/: fix-nohup-selinux.sh
src/: lib.rs  main.rs  util.rs
src/agent/: loop_.rs  prompt.rs
src/approval/: mod.rs
src/channels/: mod.rs  telegram.rs  tts.rs
src/config/: mod.rs  schema.rs
src/cron/: mod.rs  scheduler.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: api.rs  api_webauthn.rs  mod.rs
src/onboard/: wizard.rs
src/providers/: anthropic.rs  bedrock.rs  copilot.rs  gemini.rs  mod.rs
src/runtime/: mod.rs  native.rs  traits.rs
src/security/: detect.rs  mod.rs  policy.rs  webauthn.rs
src/skills/: testing.rs
src/sop/: condition.rs  dispatch.rs  engine.rs  mod.rs
src/tools/: content_search.rs  cron_add.rs  cron_update.rs  delegate.rs  file_edit.rs  file_read.rs  file_write.rs  mod.rs  model_routing_config.rs  schedule.rs  swarm.rs  termux_api.rs
tool_descriptions/: en.toml
web/src/lib/: ws.ts
