[workspace]
members = ["."]
resolver = "2"

[package]
name = "zeroclawlabs"
version = "0.6.2"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT OR Apache-2.0"
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository = "https://github.com/zeroclaw-labs/zeroclaw"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version = "1.87"
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
  "/tool_descriptions/**/*",
]

[[bin]]
name = "zeroclaw"
path = "src/main.rs"

[lib]
name = "zeroclaw"
path = "src/lib.rs"

[dependencies]
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_ignored = "0.1"
serde_yaml = "0.9"

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Observability - Prometheus metrics (optional; requires AtomicU64, unavailable on 32-bit)
prometheus = { version = "0.14", default-features = false, optional = true }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML to plain text conversion (web_fetch tool)
nanohtml2text = "0.2"

# Progress bars (update pipeline)
indicatif = "0.18"

# Temp files (update pipeline rollback)
tempfile = "3.26"

# Zip extraction for ClawhHub / OpenClaw registry installers
zip = { version = "8.1", default-features = false, features = ["deflate"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"



# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# Portable atomic fallbacks for targets without native 64-bit atomics
portable-atomic = "1"

# serde-big-array for wa-rs storage (large array serialization)
serde-big-array = { version = "0.5", optional = true }

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = "0.17"

# Protobuf encode/decode (Lark WS frame codec, WhatsApp storage)
prost = { version = "0.14", default-features = false, features = ["derive"], optional = true }

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Device discovery (path globbing)
glob = "0.3"

# Binary discovery (init system detection)
which = "8.0"

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-socks = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"], optional = true }
regex = "1.10"
hostname = "0.4.2"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

# email
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
async-imap = { version = "0.11",features = ["runtime-tokio"], default-features = false }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
http-body-util = "0.1"

# Embed frontend assets into binary (web dashboard)
rust-embed = "8"
mime_guess = "2"

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["channel-nostr", "channel-lark", "skill-creation", "observability-prometheus"]
channel-nostr = ["dep:nostr-sdk"]
channel-lark = ["dep:prost"]
channel-feishu = ["channel-lark"]  # Alias for Feishu users (Lark and Feishu are the same platform)
observability-prometheus = ["dep:prometheus"]

# Prometheus metrics observer (requires 64-bit atomics; disable on 32-bit targets)
metrics = ["observability-prometheus"]

# skill-creation = Autonomous skill creation from successful multi-step tasks
skill-creation = []

# ─── Termux (Android) build profiles ─────────────────────────────────────────

# Standard Termux (aarch64 / 64-bit Android phones):
# Drops: rag-pdf, channel-matrix, observability-otel, browser-native,
#        sandbox-landlock, sandbox-bubblewrap, voice-wake, plugins-wasm,
#        memory-postgres, whatsapp-web
# Keeps: channel-nostr, channel-lark, skill-creation, observability-prometheus
# Build: cargo build --release --no-default-features --features termux
termux = [
    "channel-nostr",              # Pure-Rust Nostr p2p messaging
    "channel-lark",               # Prost protobuf only — lightweight
    "skill-creation",             # Zero extra deps — autonomous skill building
    "observability-prometheus",   # Safe on aarch64 (64-bit AtomicU64 present)
]

# Minimal Termux (armv7 / 32-bit Android, or storage-constrained devices):
# Drops prometheus too (AtomicU64 unavailable on 32-bit ARM).
# Build: cargo build --release --no-default-features --features termux-minimal
termux-minimal = [
    "channel-nostr",
    "skill-creation",
]

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[profile.ci]
inherits = "release"
lto = "thin"         # Much faster than fat LTO; still catches release-mode issues
codegen-units = 16   # Full parallelism for CI runners

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
rcgen = "0.13"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
